// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourceFooter Component default case should render 1`] = `
<div
  className="source-footer"
>
  <div
    className="cursor-position"
    title="(Line 0, column 0)"
  >
    (0, 0)
  </div>
  <PaneToggleButton
    collapsed={false}
    horizontal={false}
    key="toggle"
    position="end"
  />
</div>
`;

exports[`SourceFooter Component move cursor should render new cursor position 1`] = `
<div
  className="source-footer"
>
  <div
    className="cursor-position"
    title="(Line 5, column 10)"
  >
    (5, 10)
  </div>
  <PaneToggleButton
    collapsed={false}
    horizontal={false}
    key="toggle"
    position="end"
  />
</div>
`;
